7386 icd10cmloader is not creating required extensions for concepts (#7392)
* Fix logic in Icd10CmLoader to append 7th character extensions to the leaf-level concepts in the hierarchy (rather than to just the immediate child concepts).

* Fix logic in Icd10CmLoader to append 7th character extensions to the leaf-level concepts in the hierarchy (rather than to just the immediate child concepts).

* Fix logic in Icd10CmLoader to append 7th character extensions to the leaf-level concepts in the hierarchy (rather than to just the immediate child concepts).

---------

Co-authored-by: Ian Marshall <ian@simpatico.ai>